# bevy-compute

./: Cargo.toml  workspace.code-workspace
src/: display.wgsl  lib.rs  main.rs  simulation.wgsl
