[package]
name = "bevy-compute"
version = "0.1.0"
authors = ["TheRawMeatball <therawmeatball@gmail.com>"]
edition = "2021"

[profile.dev]
opt-level = 1

[features]
dev = ["bevy/dynamic"]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }
rand = "0.8"
wgpu = "0.12"
bytemuck = { version = "1.4", features = [ "derive" ] }
image = "0.23"

